Added Rgb and Hsl Color Mods

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         </div>
 
         <button id="toggleBtn">Toggle Grid</button>
+        <button id="rgbaBtn">Toggle RGBA</button>
+        <button id="hslBtn">Toggle HSL</button>
         <input id="colorPicker" type="color" value="#000000">RED</input>
     </div>
     <script src="main.js"></script>
